--- a/public/learn/index.html
+++ b/public/learn/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ngoi2x</title>
+    <title>Learn</title>
 </head>
 <body>
-    <p>test</p>
+    <p>Coming soon...</p>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Landing page ads -->
     <ins class="adsbygoogle"
