--- a/public/learn/index.html
+++ b/public/learn/index.html
@@ -9,15 +9,15 @@
 <body>
     <p>Coming soon...</p>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Landing page ads -->
+    <!-- Port -->
     <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-0610053756453486"
-            data-ad-slot="8122460420"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
+        style="display:block"
+        data-ad-client="ca-pub-0610053756453486"
+        data-ad-slot="9648463965"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
     <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
+        (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 </body>
 </html>
