--- a/codepen/htmlheadershow/index.html
+++ b/codepen/htmlheadershow/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cursor Bin</title>
+    <title>😁😁😂😂😃</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button class="bin">🗑</button>
-    <button class="overlay" disabled></button>
-    <div>
-        <small>
-            <i></i>
-        </small>
-    </div>
 </body>
 </html>
