--- a/htmlcss/bmw/index.html
+++ b/htmlcss/bmw/index.html
@@ -11,12 +11,18 @@
 <body>
     <div class="container">
         <div class="main">
+            <!-- ------------
+                Navigation 
+            ------------- -->
             <nav class="navigation">
                 <a href="#!">
-                    <img src="img/logo.png" alt="" class="logo">
+                    <img src="http://co0kie.github.io/htmlcss/bmw/img/logo.png" alt="" class="logo">
                 </a>
                 <button class="js-btn">☰</button>
             </nav>
+            <!-- ------------
+                Header
+            ------------- -->
             <header class="header">
                 <h2 class="title">All Models</h2>
                 <ul class="pills">
@@ -26,25 +32,28 @@
                     <li class="pill">SUV</li>
                 </ul>
             </header>
+            <!-- ------------
+                Header
+            ------------- -->
             <div class="card">
                 <div class="card_top">
                     <strong class="name">BMW 420 i</strong>
                     <span>360°</span>
                 </div>
                 <div class="card_mid">
-                    <img src="img/car1.png" alt="">
+                    <img src="http://co0kie.github.io/htmlcss/bmw/img/car1.png" alt="">
                 </div>
                 <div class="card_bottom">
                     <div>
-                        <img src="img/settings.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/settings.svg" alt="">
                         <small>320KW</small>
                     </div>
                     <div>
-                        <img src="img/flash.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/flash.svg" alt="">
                         <small>4.2SEC</small>
                     </div>
                     <div>
-                        <img src="img/car.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/car.svg" alt="">
                         <small>260°</small>
                     </div>
                 </div>
@@ -55,19 +64,19 @@
                     <span>360°</span>
                 </div>
                 <div class="card_mid">
-                    <img src="img/car2.png" alt="">
+                    <img src="http://co0kie.github.io/htmlcss/bmw/img/car2.png" alt="">
                 </div>
                 <div class="card_bottom">
                     <div>
-                        <img src="img/settings.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/settings.svg" alt="">
                         <small>320KW</small>
                     </div>
                     <div>
-                        <img src="img/flash.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/flash.svg" alt="">
                         <small>4.2SEC</small>
                     </div>
                     <div>
-                        <img src="img/car.svg" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/car.svg" alt="">
                         <small>260°</small>
                     </div>
                 </div>
@@ -75,12 +84,12 @@
         </div>
         <div class="inner">
             <header class="inner_header">
-                <button><img src="img/back.svg" alt=""></button>
+                <button><img src="http://co0kie.github.io/htmlcss/bmw/img/back.svg" alt=""></button>
                 <h2 class="inner_header-title">BMW 420 i</h2>
                 <span>360°</span>
             </header>
             <div class="inner_body">
-                <img src="img/car3.png" alt="" class="car">
+                <img src="http://co0kie.github.io/htmlcss/bmw/img/car3.png" alt="" class="car">
                 <div class="info">
                     <div>
                         <small>POWER</small>
@@ -99,13 +108,13 @@
             <div class="inner_bottom">
                 <div class="gallery">
                     <div>
-                        <img src="img/car4.png" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/car4.png" alt="">
                     </div>
                     <div>
-                        <img src="img/car5.png" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/car5.png" alt="">
                     </div>
                     <div>
-                        <img src="img/car6.png" alt="">
+                        <img src="http://co0kie.github.io/htmlcss/bmw/img/car6.png" alt="">
                     </div>
                 </div>
                 <button>Test drive</button>
