--- a/codepen/google-services/index.html
+++ b/codepen/google-services/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="smash"></div>
-    </div>
+    <div class="adsense"></div>
+    <div class="tagmanager"></div>
+    <div class="analytics"></div>
 </body>
 </html>
