--- a/index.html
+++ b/index.html
@@ -47,68 +47,25 @@
   <body>
     <div class="splash">
       <div class="logo">
-        <svg
-          width="45"
-          height="64"
-          viewBox="0 0 118 167"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <g filter="url(#filter0_d_335_3)">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M83.1305 30.3043C83.1305 30.5228 83.1263 30.7402 83.1177 30.9565H83.1305V135.957V136.609H83.1177C82.7754 145.311 75.6124 152.261 66.8262 152.261C58.04 152.261 50.877 145.311 50.5347 136.609H50.5219V135.957V30.9565H50.5347C50.5261 30.7402 50.5219 30.5228 50.5219 30.3043C50.5219 21.2997 57.8216 14 66.8262 14C75.8308 14 83.1305 21.2997 83.1305 30.3043ZM99.2246 34.4276C96.1669 31.37 92.0198 29.6522 87.6956 29.6522V45.9565L87.6957 62.2609C92.0198 62.2609 96.1669 60.5431 99.2246 57.4854C102.282 54.4278 104 50.2807 104 45.9565C104 41.6323 102.282 37.4853 99.2246 34.4276ZM46.5959 98.7826C46.6044 98.5663 46.6087 98.3489 46.6087 98.1305C46.6087 89.1258 39.309 81.8261 30.3043 81.8261C21.2997 81.8261 14 89.1258 14 98.1305C14 98.3489 14.0043 98.5663 14.0128 98.7826H14V118.348H14.1162C14.0395 118.989 14 119.642 14 120.304C14 129.309 21.2997 136.609 30.3043 136.609C39.309 136.609 46.6087 129.309 46.6087 120.304C46.6087 119.642 46.5692 118.989 46.4925 118.348H46.6087V98.7826H46.5959Z"
-              fill="url(#paint0_linear_335_3)"
-            />
+        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="64" fill="none" viewBox="0 0 118 167">
+          <g filter="url(#a)">
+            <path fill="url(#b)" fill-rule="evenodd" d="M83.13 30.304c0 .219-.004.436-.012.652h.013V136.61h-.013c-.343 8.702-7.506 15.652-16.292 15.652-8.786 0-15.949-6.95-16.291-15.652h-.013V30.957h.013a16.416 16.416 0 0 1-.013-.653C50.522 21.3 57.822 14 66.826 14c9.005 0 16.305 7.3 16.305 16.304Zm16.095 4.124a16.305 16.305 0 0 0-11.53-4.776V62.261a16.304 16.304 0 0 0 11.53-27.833Zm-52.63 64.355c.01-.217.014-.434.014-.653 0-9.004-7.3-16.304-16.305-16.304C21.3 81.826 14 89.126 14 98.131c0 .218.004.435.013.652H14v19.565h.116a16.462 16.462 0 0 0-.116 1.956c0 9.005 7.3 16.305 16.304 16.305 9.005 0 16.305-7.3 16.305-16.305 0-.662-.04-1.315-.117-1.956h.117V98.783h-.013Z" clip-rule="evenodd"/>
           </g>
           <defs>
-            <filter
-              id="filter0_d_335_3"
-              x="0"
-              y="0"
-              width="118"
-              height="166.261"
-              filterUnits="userSpaceOnUse"
-              color-interpolation-filters="sRGB"
-            >
-              <feFlood flood-opacity="0" result="BackgroundImageFix" />
-              <feColorMatrix
-                in="SourceAlpha"
-                type="matrix"
-                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                result="hardAlpha"
-              />
-              <feOffset />
-              <feGaussianBlur stdDeviation="7" />
-              <feComposite in2="hardAlpha" operator="out" />
-              <feColorMatrix
-                type="matrix"
-                values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.21 0"
-              />
-              <feBlend
-                mode="normal"
-                in2="BackgroundImageFix"
-                result="effect1_dropShadow_335_3"
-              />
-              <feBlend
-                mode="normal"
-                in="SourceGraphic"
-                in2="effect1_dropShadow_335_3"
-                result="shape"
-              />
-            </filter>
-            <linearGradient
-              id="paint0_linear_335_3"
-              x1="90.5"
-              y1="11"
-              x2="18.5"
-              y2="152"
-              gradientUnits="userSpaceOnUse"
-            >
-              <stop stop-color="#44FBFB" />
-              <stop offset="1" stop-color="#71DDFF" />
+            <linearGradient id="b" x1="90.5" x2="18.5" y1="11" y2="152" gradientUnits="userSpaceOnUse">
+              <stop stop-color="#44FBFB"/>
+              <stop offset="1" stop-color="#71DDFF"/>
             </linearGradient>
+            <filter id="a" width="118" height="166.261" x="0" y="0" color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feColorMatrix in="SourceAlpha" result="hardAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+              <feOffset/>
+              <feGaussianBlur stdDeviation="7"/>
+              <feComposite in2="hardAlpha" operator="out"/>
+              <feColorMatrix values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.21 0"/>
+              <feBlend in2="BackgroundImageFix" result="effect1_dropShadow_335_3"/>
+              <feBlend in="SourceGraphic" in2="effect1_dropShadow_335_3" result="shape"/>
+            </filter>
           </defs>
         </svg>
       </div>
