--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       onload="this.rel='stylesheet'"
     />
     <link rel="stylesheet" href="assets/style.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610053756453486"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
