--- a/a/index.html
+++ b/a/index.html
@@ -21,7 +21,7 @@
       content="Hi, I'm Jech, Web developer at Arcanys"
     />
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +30,20 @@
       as="style"
       onload="this.rel='stylesheet'"
     />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610053756453486"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      .splash {
+        justify-content: flex-start;
+        align-items: baseline;
+        padding: 40px;
+      }
+    </style>
   </head>
 
   <body>
@@ -97,25 +110,6 @@
           </defs>
         </svg>
       </div>
-      <div class="content">
-        <p>Hi, I’m <a href="mailto:me@jerecho.com" title="Hi">Jech</a>,</p>
-        <p>
-          Web developer at
-          <a href="https://www.arcanys.com" title="Arcanys Inc.">Arcanys</a>
-        </p>
-      </div>
     </div>
   </body>
-  <!--  ***************************  -->
-  <!-- Youtube: https://www.youtube.com/c/JerechoPontoy/videos -->
-  <!-- Codepen: https://codepen.io/co0kie -->
-  <!-- About: 
-
-    Jech is a seasoned web developer with agile methodology background and with over 10 years industry experience. 
-    Worked at Techforge as a web designer / developer for local businesses in the Philippines. In 2012, he joined Arcanys, 
-    a Swiss owned IT company based in Cebu where he developed his expertise in front end development 
-    and have supported clients from Europe and Australia.
-
-  -->
-  <!--  ***************************  -->
 </html>
