--- a/a/index.html
+++ b/a/index.html
@@ -31,11 +31,6 @@
       onload="this.rel='stylesheet'"
     />
     <link rel="stylesheet" href="../assets/style.css" />
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610053756453486"
-      crossorigin="anonymous"
-    ></script>
 
     <style>
       .splash {
@@ -111,5 +106,22 @@
         </svg>
       </div>
     </div>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0610053756453486"
+      crossorigin="anonymous"
+    ></script>
+    <!-- an A -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-0610053756453486"
+      data-ad-slot="3091956178"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
