--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
       onload="this.rel='stylesheet'"
     />
     <link rel="stylesheet" href="assets/style.css" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Jech",
+        "hasOccupation": {
+          "@type": "Occupation",
+          "name": "Web Developer",
+          "educationRequirements": "Information Technology"
+        }
+      }
+      </script>
   </head>
 
   <body>
