--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
         "hasOccupation": {
           "@type": "Occupation",
           "name": "Web Developer",
-          "educationRequirements": "Information Technology"
+          "educationRequirements": "Information Technology",
+          "estimatedSalary": 1337,
+          "occupationLocation": "Localhost"
         }
       }
-      </script>
+    </script>
   </head>
 
   <body>
