--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
           "@type": "Occupation",
           "name": "Web Developer",
           "educationRequirements": "Information Technology",
-          "estimatedSalary": 1337,
-          "occupationLocation": "Localhost"
+          "estimatedSalary": [
+            {
+              "@type": "Number",
+              "amount": 1337
+            }
+          ],
+          "occupationLocation": [
+            {
+              "@type": "City",
+              "name": "Localhost"
+            }
+          ]
         }
       }
     </script>
